force-app/zurich-base/main/default/objects/MunicipalityAssignment__mdt/MunicipalityAssignment__mdt.object-meta.xml
<CustomObject>
    <description>Almacenar la correspondecia entre el municipio y Agente Mediador o pull de Contact Center.</description>
    <label>Municipality Assignment</label>
    <pluralLabel>Municipalities Assignments</pluralLabel>
</CustomObject>