force-app/zurich-base/main/default/objects/MunicipalityAssignment__mdt/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Los dos primeros dígitos del Código Postal.</description>
    <label>Postal Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>