force-app/zurich-base/main/default/objects/MunicipalityAssignment__mdt/fields/ProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ProvinceCode__c</fullName>
    <description>Código provincial del código postal</description>
    <label>ProvinceCode</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>