force-app/zurich-base/main/default/objects/MunicipalityAssignment__mdt/fields/ZIPRanges__c.field-meta.xml
<CustomField>
    <fullName>ZIPRanges__c</fullName>
    <description>Mapa del tipo {Código postal : Código de agente}, donde código postal es el último código postal de la provincia que corresponde a ese agente.</description>
    <label>ZIPRanges</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>